# Vehicle-Parking-System-2

./: README.md
backend2/: app.py  celery_config.py  celerybeat-schedule  dump.rdb  pyproject.toml
backend2/application/: celery_init.py  config.py  controllers.py  data_access.py  mail.py  tasks.py
backend2/instance/: project_db.sqlite3
backend2/static/: parking_history_20251127_155859.csv  parking_history_20251128_132514.csv
frontend/src/components/: Login.vue  Userhistory.vue
